# sast-gallery

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.cmake/: InstallerScript.iss.in  Version.cmake  version_exe.rc.in
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  clang-tidy-review.yml  format-check.yml  macos.yml  ubuntu.yml  windows.yml
res/: res.qrc
scripts/: windows-publish.ps1
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/delegate/: DiskScanner.cpp  DiskScanner.h  ImageViewer.cpp  ImageViewer.h  MediaViewer.cpp  MediaViewer.h  MediaViewerDelegate.cpp  MediaViewerDelegate.h
src/model/: FavoriteImageProxyModel.cpp  FavoriteImageProxyModel.h  FavoriteProxyModel.cpp  FavoriteProxyModel.h  ImageListModel.cpp  ImageListModel.h  MediaItem.h  MediaListModel.cpp  MediaListModel.h
src/utils/: GalleryWidget.cpp  GalleryWidget.h  ImageFlexLayout.cpp  ImageFlexLayout.h  MediaFlexLayout.cpp  MediaFlexLayout.h  MediaPreview.cpp  MediaPreview.h  MediaPreviewer.cpp  MediaPreviewer.h  MediaThumbnail.cpp  MediaThumbnail.h  Settings.hpp  Tools.cpp  Tools.h  WindowOverlayWidget.h
src/view/: AboutPage.cpp  AboutPage.h  BasePage.cpp  BasePage.h  FavoritePage.cpp  FavoritePage.h  GalleryPage.cpp  GalleryPage.h  ImageViewer.cpp  ImageViewer.h  MediaViewer.cpp  MediaViewer.h  SettingPage.cpp  SettingPage.h  ViewingWindow.cpp  ViewingWindow.h  ZoomableGraphicsView.h
src/view/component/: FileInfoWidget.cpp  FileInfoWidget.h  GalleryWidget.cpp  ImageViewer.cpp  ImageViewer.h  MediaPreviewer.cpp  MediaPreviewer.h
